welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:69: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:72: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:75: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:78: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:81: error: Unmatched closing brace '}' ignored here
}
^